--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,6 +25,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
+    environment:
+      - MONGO=mongo
     depends_on:
       - mongo
     networks:
