--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,3 +2,10 @@ FROM node:18-alpine as dev
 USER node
 WORKDIR /develop
 EXPOSE 5000
+
+FROM node:18-alpine as prod
+USER node
+WORKDIR /prod
+COPY . .
+RUN npm ci
+CMD [ "node", "." ]
